--- a/PhonesBook.Tests/packages.config
+++ b/PhonesBook.Tests/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="NUnit" version="3.12.0" targetFramework="net45" />
   <package id="NUnit3TestAdapter" version="3.15.1" targetFramework="net45" />
+  <package id="Shouldly" version="3.0.2" targetFramework="net45" />
 </packages>
