--- a/PhonesBook/packages.config
+++ b/PhonesBook/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="NUnit" version="3.12.0" targetFramework="net45" />
   <package id="NUnitLite" version="3.12.0" targetFramework="net45" />
+  <package id="Shouldly" version="3.0.2" targetFramework="net45" />
 </packages>
